[package]
name = "Octo Traders"
version = "0.1.0"
authors = ["Hayden Faulds <fauldsh@gmail.com>"]
edition = "2020"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'InputEvent',
  'WebGlShader',
  'WebGlUniformLocation',
]
