[package]
name = "octo-traders"
version = "0.1.0"
authors = ["Hayden Faulds <fauldsh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_log = { version = "0.2", features = ["color"] }
js-sys = "0.3"
log = "0.4"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
yew = "0.17"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'InputEvent',
  'WebGlShader',
  'WebGlUniformLocation',
]
